--- a/Monopoly/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly/Monopoly.vcxproj
@@ -124,6 +124,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Utility.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Basemap.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
