--- a/Monopoly/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly/Monopoly.vcxproj
@@ -123,13 +123,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Chance.cpp" />
+    <ClCompile Include="Destiny.cpp" />
+    <ClCompile Include="Estate.cpp" />
+    <ClCompile Include="GameMap.cpp" />
+    <ClCompile Include="Location.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Basemap.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Chance.h" />
+    <ClInclude Include="Destiny.h" />
+    <ClInclude Include="Estate.h" />
+    <ClInclude Include="GameMap.h" />
+    <ClInclude Include="Location.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
