--- a/Monopoly/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly/Monopoly.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="Destiny.cpp" />
     <ClCompile Include="Estate.cpp" />
     <ClCompile Include="GameMap.cpp" />
+    <ClCompile Include="InfoPanel.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="Destiny.h" />
     <ClInclude Include="Estate.h" />
     <ClInclude Include="GameMap.h" />
+    <ClInclude Include="InfoPanel.h" />
     <ClInclude Include="Location.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Utility.h" />
