--- a/Monopoly/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly/Monopoly.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Destiny.cpp">
       <Filter>來源檔案\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="InfoPanel.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Basemap.txt">
@@ -72,6 +75,9 @@
     </ClInclude>
     <ClInclude Include="Location.h">
       <Filter>標頭檔\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="InfoPanel.h">
+      <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
