--- a/Monopoly/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly/Monopoly.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="InfoPanel.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="OperatingPlayers.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
@@ -143,6 +144,7 @@
     <ClInclude Include="GameMap.h" />
     <ClInclude Include="InfoPanel.h" />
     <ClInclude Include="Location.h" />
+    <ClInclude Include="OperatingPlayers.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
