--- a/Monopoly/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly/Monopoly.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OperatingPlayers.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Stack.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +147,7 @@
     <ClInclude Include="Location.h" />
     <ClInclude Include="OperatingPlayers.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Stack.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
