--- a/Monopoly/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly/Monopoly.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="OperatingPlayers.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="Stack.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Basemap.txt">
@@ -83,6 +86,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="OperatingPlayers.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
