--- a/Monopoly/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly/Monopoly.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bank.cpp" />
     <ClCompile Include="Chance.cpp" />
     <ClCompile Include="Destiny.cpp" />
     <ClCompile Include="Estate.cpp" />
@@ -130,6 +131,7 @@
     <ClCompile Include="InfoPanel.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="OperatingPlayers.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Stack.cpp" />
@@ -139,12 +141,14 @@
     <Text Include="Basemap.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bank.h" />
     <ClInclude Include="Chance.h" />
     <ClInclude Include="Destiny.h" />
     <ClInclude Include="Estate.h" />
     <ClInclude Include="GameMap.h" />
     <ClInclude Include="InfoPanel.h" />
     <ClInclude Include="Location.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="OperatingPlayers.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Stack.h" />
