--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-Monopoly/Stacks.txt
+/Stacks.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
