--- a/Monopoly/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly/Monopoly.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Menu.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="mainScreen.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Basemap.txt">
@@ -101,6 +104,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="mainScreen.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
