Fix turn issues and make WriteMap functionable

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-/Stacks.txt
+Monopoly/Monopoly/Stacks.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -329,3 +329,4 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
