--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-Monopoly/Monopoly/Stacks.txt
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -330,3 +330,5 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 
+/Monopoly/Monopoly/test.txt
+/Monopoly/Monopoly/Stacks.txt
