--- a/Monopoly/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly/Monopoly.vcxproj.filters
@@ -68,6 +68,9 @@
     <Text Include="Basemap.txt">
       <Filter>資源檔</Filter>
     </Text>
+    <Text Include="test.txt">
+      <Filter>資源檔</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utility.h">
