--- a/Monopoly/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly/Monopoly.vcxproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Basemap.txt" />
+    <Text Include="test.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bank.h" />
