Add Taiwan.txt and fix typo

--- a/Monopoly/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly/Monopoly.vcxproj.filters
@@ -71,6 +71,9 @@
     <Text Include="test.txt">
       <Filter>資源檔</Filter>
     </Text>
+    <Text Include="Taiwan.txt">
+      <Filter>資源檔</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utility.h">
