Add save game function

--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,4 @@ ASALocalRun/
 /Monopoly/Monopoly/test.txt
 /Monopoly/Monopoly/Stacks.txt
 /Monopoly/Monopoly/debug.txt
+/Monopoly/Monopoly/SaveGame.txt
